created color,margin,text,select components

--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,12 @@ plaintext
 Copy code
 # Ignore node_modules directory
 /node_modules
+lib/
 
 # Ignore log files and other generated files
 *.log
 *.json
+*.lib
 
 # Ignore operating system files
 .DS_Store
